# woos-nwn-parser

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  WoosNwnParser-onedir.spec  WoosNwnParser-onefile.spec  WoosNwnParser.spec  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  __main__.py  constants.py  line_parser.py  models.py  monitor.py  parsed_events.py  parser.py  parser_session.py  settings.py  storage.py  utils.py
app/assets/: __init__.py
app/services/: __init__.py  dps_service.py  event_ingestion.py  immunity_matcher.py  past_logs_parser.py  queue_processor.py
app/ui/: __init__.py  formatters.py  main_window.py  message_dialogs.py  runtime_config.py  tooltips.py  tree_refresh.py  window_style.py
app_round_time/: __init__.py  __main__.py  log_reader.py  models.py  parser.py  round_timer.py  stats.py  watcher.py
docs/knowledge/: architecture.md  immunity-matching.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.8.0.md
scripts/: benchmark_baseline.py  benchmark_commit_comparison.py  benchmark_import_ipc.py  benchmark_import_ops_memory.py  benchmark_monitor_polling.py  benchmark_parser_component_costs.py  benchmark_parser_hotspots.py  benchmark_parser_session_overhead.py  benchmark_read_refresh.py  benchmark_save_change_validation.py  benchmark_ui_refresh.py  bump_version.py
tests/: TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  demo_game_restart.py  test_dps_auto_refresh.py  test_dps_service.py  test_file_truncation.py  test_final_verification.py  test_formatters.py  test_integration_real_scenario.py  test_log_rotation.py  test_per_character_time_tracking.py  test_queue_processor.py  test_selection_preservation.py
tests-round-time/: test_lag_stats.py  test_log_rotation.py  test_parser_attack_match.py  test_round_timer_counts.py  test_round_timer_stats.py
tests/e2e/: __init__.py  test_e2e_combat_session.py
tests/fixtures/: README.md  nwclientLog1_for_testing.txt  nwclientLog2.txt  real_deadwyrm_offhand_crit_mix.txt  real_flurry_conceal_epicdodge.txt  real_tod_risen_save_dense.txt  synthetic_parser_variety_matrix.txt
tests/helpers/: parsed_event_factories.py  parsed_events.py  store_mutations.py
tests/integration/: __init__.py  test_dps_pipeline_integration.py  test_file_truncation.py  test_final_verification.py  test_integration_real_scenario.py  test_log_rotation.py  test_monitor_parser_integration.py  (+1 more)
tests/unit/: __init__.py  (+44 more)
(+29 files in other folders)
