[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woos-nwn-parser"
version = "1.4.0"
description = "Real-time combat log parser and DPS analyzer for Neverwinter Nights"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "Synvan"}
]
keywords = [
    "neverwinter-nights",
    "nwn",
    "dps",
    "combat-log",
    "parser",
    "gaming",
    "rpg"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
requires-python = ">=3.12"
dependencies = [
    "sv-ttk>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
build = [
    "pyinstaller>=6.17.0",
]

[project.urls]
Homepage = "https://github.com/synvanalt/woos-nwn-parser"
Documentation = "https://github.com/synvanalt/woos-nwn-parser#readme"
Repository = "https://github.com/synvanalt/woos-nwn-parser"
Issues = "https://github.com/synvanalt/woos-nwn-parser/issues"
Changelog = "https://github.com/synvanalt/woos-nwn-parser/releases"

[project.gui-scripts]
woos-nwn-parser = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if 0:",
    "if False:",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"
